tune JAVA_OPTS